styled the write_review page somewhat and removed some options from the toolbar of the tinymce that were unneccessary for my purpose

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -409,3 +409,7 @@ width: 100%;
     width: 100%;
     border-radius: 25px;
 }
+
+.review_title_link:hover{
+    text-decoration: underline !important;
+}
